feat: delete mocks
